+ Hadeth Home Fragment Design + Hadeth Detail Activity  note:It have logical error need to solve

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hadeth">Hadeth</string>
     <string name="sebha">Sebha</string>
     <string name="radio">Radio</string>
+    <string name="hadeth_text">الأحاديث</string>
 </resources>
